# generate_synthetic_table

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
generate_synthetic_table/: __init__.py  flow.py  llm_factory.py  runner.py  validators.py
generate_synthetic_table/prompts/: generate_synthetic_table.txt  image_to_html.txt  parse_contents.txt  parse_synthetic_table.txt  revise_synthetic_table.txt  self_reflection.txt
src/: __init__.py  cli.py  flow.py  runner.py
src/prompts/: generate_synthetic_table.txt  image_to_html.txt  parse_contents.txt  self_reflection.txt
tests/: test_flow.py  test_utils.py
